--- a/configs/server/config.yml
+++ b/configs/server/config.yml
@@ -1,10 +1,12 @@
 port: "5005"
 db_path: "./db.db"
-base_dir: "."
+base_dir: "data"
 ping_every: "30s"
 run_every: "15s"
 timeout: "15s"
-farm_url: "http://127.0.0.1:6666"
+farm_url: "http://127.0.0.1:5000"
+farm_password: "password"
 flag_regexp: "[A-Z0-9]{31}="
+grpc_auth_key: "s3cret_t0ken_pls_d0nt_leak"
 ip_list:
   - "127.0.0.1"
