--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,11 @@ out/
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/go,jetbrains
+
+.DS_Store
+.idea/
+client/
+cmd/.DS_Store
+db.db
+dist/
+server/
