--- a/configs/server/config.yml
+++ b/configs/server/config.yml
@@ -9,3 +9,6 @@ grpc_auth_key: "s3cret_t0ken_pls_d0nt_leak"
 farm:
   url: "http://127.0.0.1:5137"
   password: "1234"
+
+env:
+  REDIS_HOST: 127.0.0.1
