Ability to run any command in environment image with start script, added image tests, added redis to requirements, added a few commands to an image

--- a/client_env/Dockerfile
+++ b/client_env/Dockerfile
@@ -10,13 +10,19 @@ RUN go build -ldflags="-s -w" -o client cmd/client/main.go
 
 FROM python:3.7
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends python-z3
+ENV PYTHONUNBUFFERED 1
+ENV PWNLIB_NOTERM 1
+
+RUN apt-get update && apt-get install -y \
+        dnsutils \
+        netcat \
+        net-tools \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY client_env/requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
 
-COPY --from=build /app/client /neo
+COPY --from=build /app/client /usr/local/bin/neo
 
-WORKDIR /sploits
-ENTRYPOINT ["/neo", "--config", "/work/config.yml"]
+WORKDIR /work
+ENTRYPOINT ["/bin/bash", "-c"]
