--- a/client_env/requirements.txt
+++ b/client_env/requirements.txt
@@ -1,14 +1,16 @@
 checklib
-requests
-pwntools
-psycopg2-binary
-websockets
-python-socketio[client]
-python-socketio[asyncio_client]
-PyMySQL
-gevent
 eventlet
 flask
-pymongo
+gevent
+psycopg2-binary
+pwntools
 pycryptodome
+pymongo
+PyMySQL
 pyopenssl
+python-socketio[asyncio_client]
+python-socketio[client]
+redis
+requests
+websockets
+z3-solver
