--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,8 +8,6 @@ builds:
     env:
       - CGO_ENABLED=0
     goos:
-      - darwin
-      - windows
       - linux
     goarch:
       - amd64
@@ -20,7 +18,6 @@ builds:
       - CGO_ENABLED=0
     goos:
       - darwin
-      - windows
       - linux
     goarch:
       - amd64
@@ -44,20 +41,17 @@ archives:
     format: zip
     builds:
       - "neo_client"
-    name_template: "{{ .ProjectName }}_client_{{ .Version }}_{{ .Os }}"
+    name_template: "{{ .ProjectName }}_client_{{ .Version }}"
     replacements:
       darwin: MacOs
       linux: Linux
       windows: Windows
       386: i386
       amd64: x64
-    format_overrides:
-      - goos: linux
-        format: tar.gz
     files:
       - README.MD
       - neo_client/config.yml
-      - neo_client/exploits/.keep
+      - neo_client/*
   - id: server
     format: zip
     builds:
