--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,5 +12,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: latest
+          args: --config .golangci.yml
       - name: Run tests
         run: go test -race ./...
