And the last linting fixes

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,3 +33,7 @@ linters-settings:
 issues:
   exclude-use-default: false
   max-same-issues: 0
+  exclude-rules:
+    - source: "status\\.Errorf"
+      linters:
+        - wrapcheck
