--- a/client_env/requirements.txt
+++ b/client_env/requirements.txt
@@ -1,7 +1,12 @@
+bs4
 checklib
+dnslib
 eventlet
 flask
 gevent
+gmpy2
+hashpumpy
+lxml
 numpy
 psycopg2-binary
 pwntools
@@ -11,7 +16,9 @@ PyMySQL
 pyopenssl
 python-socketio[asyncio_client]
 python-socketio[client]
+sympy
 redis
+regex
 requests
 websockets
 z3-solver
