--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,10 @@ jobs:
           go-version: 1.16
 
       - name: Run tests
-        run: go test -race ./...
+        run: make test
 
       - name: Prepare for release
-        run: ./scripts/setup_release.sh
+        run: make setup-release
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
