--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,6 @@ jobs:
           version: latest
           args: --config .golangci.yml
       - name: Run tests
-        run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+        run: make test-cov
       - name: Upload coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
