--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,17 @@ jobs:
         with:
           go-version: 1.16
 
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+
       - name: Run tests
         run: make test
 
       - name: Prepare for release
-        run: make setup-release
+        run: |
+          echo ${{ steps.get_version.outputs.VERSION }} > client_env/.version
+          make setup-release
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
@@ -30,3 +36,27 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+
+      - name: Build and push client image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: client_env/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/neo_env:latest
+            ghcr.io/${{ github.repository_owner }}/neo_env:${{ steps.get_version.outputs.VERSION }}
