--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ on:
   - push
   - pull_request
 jobs:
-  code-tests:
+  code:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,13 +21,11 @@ jobs:
         run: make test-cov
       - name: Upload coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
-      - name: check client environment image
-        run: make prepare-image
 
-  image-tests:
+  image:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: check client environment image
+      - name: Build & test client image
         run: make prepare-image
