--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,9 @@ jobs:
           context: .
           file: client_env/Dockerfile
           push: true
+          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           tags: |
             ghcr.io/${{ github.repository_owner }}/neo_env:latest
             ghcr.io/${{ github.repository_owner }}/neo_env:${{ steps.get_version.outputs.VERSION }}
