Experimental light client image

--- a/client_env/Dockerfile
+++ b/client_env/Dockerfile
@@ -11,7 +11,36 @@ COPY lib lib
 COPY pkg pkg
 RUN CGO_ENABLED=0 go build -ldflags="-s -w" -o client cmd/client/main.go
 
-FROM python:3.10
+FROM python:3.10 as image-full
+
+ENV PYTHONUNBUFFERED 1
+ENV PWNLIB_NOTERM 1
+
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+RUN apt-get update && apt-get install -y \
+        gcc \
+        libmpc-dev \
+        libmpfr-dev \
+        dnsutils \
+        netcat \
+        net-tools \
+        dbus \
+        vim \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY client_env/requirements.txt /requirements.txt
+RUN pip install --no-cache -r /requirements.txt
+
+COPY --from=build /app/client /usr/local/bin/neo
+
+COPY client_env/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+WORKDIR /work
+ENTRYPOINT ["/entrypoint.sh"]
+
+FROM python:3.10 as image-full-sage
 
 ENV PYTHONUNBUFFERED 1
 ENV PWNLIB_NOTERM 1
@@ -32,6 +61,16 @@ RUN apt-get update && apt-get install -y \
 
 COPY client_env/requirements.txt /requirements.txt
 RUN pip install --no-cache -r /requirements.txt
+
+COPY --from=build /app/client /usr/local/bin/neo
+
+COPY client_env/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+WORKDIR /work
+ENTRYPOINT ["/entrypoint.sh"]
+
+FROM alpine:3.16 as image-light
 
 COPY --from=build /app/client /usr/local/bin/neo
 
