--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,27 +38,57 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push client image
-        id: docker_build
-        uses: docker/build-push-action@v2
+      - name: Build and push full client image
+        id: docker_build_full
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: client_env/Dockerfile
+          target: image-full
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
           tags: |
             ghcr.io/${{ github.repository_owner }}/neo_env:latest
             ghcr.io/${{ github.repository_owner }}/neo_env:${{ steps.get_version.outputs.VERSION }}
+
+      - name: Build and push light client image
+        id: docker_build_light
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: client_env/Dockerfile
+          target: image-light
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/neo_env_light:latest
+            ghcr.io/${{ github.repository_owner }}/neo_env_light:${{ steps.get_version.outputs.VERSION }}
+
+      - name: Build and push sage client image
+        id: docker_build_sage
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: client_env/Dockerfile
+          target: image-full-sage
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/neo_env_sage:latest
+            ghcr.io/${{ github.repository_owner }}/neo_env_sage:${{ steps.get_version.outputs.VERSION }}
+
