Fix client Dockerfile

--- a/client_env/Dockerfile
+++ b/client_env/Dockerfile
@@ -1,34 +1,40 @@
-FROM golang:1.19 as build
+FROM golang:1.20 as build
+
+ENV CGO_ENABLED=0
 
 WORKDIR /app
-COPY go.mod .
-COPY go.sum .
-RUN go mod download
-
+COPY go.* ./
 COPY cmd cmd
 COPY internal internal
 COPY lib lib
 COPY pkg pkg
-RUN CGO_ENABLED=0 go build -ldflags="-s -w" -o client cmd/client/main.go
+RUN --mount=type=cache,target=/root/.cache/go-build \
+    --mount=type=cache,target=/go/pkg/mod \
+        go build \
+            -ldflags="-s -w" \
+            -o client \
+            cmd/client/main.go
 
 FROM python:3.10 as image-full
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-RUN apt-get update \
-    && apt-get install -y \
-        gcc \
-        libmpc-dev \
-        libmpfr-dev \
-        dnsutils \
-        netcat \
-        net-tools \
-        dbus \
-        vim \
-    && rm -rf /var/lib/apt/lists/*
+RUN --mount=type=cache,sharing=private,target=/var/cache/apt \
+        apt-get update && \
+        apt-get install -y \
+            gcc \
+            libmpc-dev \
+            libmpfr-dev \
+            dnsutils \
+            netcat-openbsd \
+            net-tools \
+            dbus \
+            vim && \
+        rm -rf /var/lib/apt/lists/*
 
 COPY client_env/requirements.txt /requirements.txt
-RUN pip install --no-cache -r /requirements.txt
+RUN --mount=type=cache,target=/root/.cache/pip \
+        pip install -r /requirements.txt
 
 COPY --from=build /app/client /usr/local/bin/neo
 
@@ -40,10 +46,11 @@ ENTRYPOINT ["/entrypoint.sh"]
 
 FROM image-full as image-full-sage
 
-RUN apt-get update && \
-    apt-get install -y \
-        sagemath \
-    && rm -rf /var/lib/apt/lists/*
+RUN --mount=type=cache,sharing=private,target=/var/cache/apt \
+        apt-get update && \
+        apt-get install -y \
+            sagemath && \
+        rm -rf /var/lib/apt/lists/*
 
 FROM alpine:3.16 as image-light
 
