--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,5 +29,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Build & test client image
-        run: make prepare-image
+      - name: Build client image
+        run: |
+          docker buildx create --use --driver=docker-container
+          docker buildx build --push \
+            -t ghcr.io/${{ steps.repo_name.outputs.lowercase }}/neo_env:latest \
+            --cache-to type=gha,mode=max \
+            --cache-from type=gha\
+            --target image-full \
+            -f client_env/Dockerfile \
+            .
+          make test-image
