--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Set up Go 1.20
-        uses: actions/setup-go@v2
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version-file: 'go.mod'
 
       - name: Get the version
         id: get_version
@@ -30,7 +30,7 @@ jobs:
           make setup-release
 
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v4
         with:
           version: latest
           args: release --rm-dist
@@ -57,7 +57,7 @@ jobs:
 
       - name: Build and push full client image
         id: docker_build_full
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: client_env/Dockerfile
@@ -72,7 +72,7 @@ jobs:
 
       - name: Build and push light client image
         id: docker_build_light
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: client_env/Dockerfile
@@ -87,7 +87,7 @@ jobs:
 
       - name: Build and push sage client image
         id: docker_build_sage
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: client_env/Dockerfile
