--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build && test client image
         run: |
           docker buildx create --use --driver=docker-container
-          docker buildx build \
+          docker buildx build --load \
             -t ghcr.io/c4t-but-s4d/neo_env:latest \
             --cache-to type=gha,mode=max \
             --cache-from type=gha\
