--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - '*'
 jobs:
   release:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -65,7 +65,7 @@ jobs:
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: 'linux/amd64,linux/arm64'
+          platforms: 'linux/amd64'
           tags: |
             ghcr.io/${{ steps.repo_name.outputs.lowercase }}/neo_env:latest
             ghcr.io/${{ steps.repo_name.outputs.lowercase }}/neo_env:${{ steps.get_version.outputs.VERSION }}
@@ -95,7 +95,7 @@ jobs:
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: 'linux/amd64,linux/arm64'
+          platforms: 'linux/amd64'
           tags: |
             ghcr.io/${{ steps.repo_name.outputs.lowercase }}/neo_env_sage:latest
             ghcr.io/${{ steps.repo_name.outputs.lowercase }}/neo_env_sage:${{ steps.get_version.outputs.VERSION }}
