--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-*.test
-*.out
 .idea
 .DS_Store
 /neo_client*
@@ -23,5 +16,5 @@ server_config.yml
 /exploits
 
 kek*
-
 volumes
+/.env
