--- a/compose.yml
+++ b/compose.yml
@@ -7,14 +7,15 @@ services:
       - "./configs/server/config.yml:/config.yml:ro"
       - "./volumes/data:/data"
     environment:
-      GRPC_AUTH_KEY: ${GRPC_AUTH_KEY}
-      FARM_PASSWORD: ${FARM_PASSWORD}
+      NEO_GRPC_AUTH_KEY: ${GRPC_AUTH_KEY}
+      NEO_FARM_PASSWORD: ${FARM_PASSWORD}
+      NEO_FARM_URL: ${FARM_URL}
     ports:
       - '5005:5005'
     restart: unless-stopped
 
   redis:
-    image: redis:6.2.6-alpine
+    image: redis:7.2.0-alpine
     restart: unless-stopped
 
   grafana:
