--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -13,3 +13,18 @@ plugins:
     out: go
     opt:
       - paths=source_relative
+
+  # Typescript
+  - plugin: buf.build/community/stephenh-ts-proto
+    out: ../front/src/proto
+    opt:
+      - enumsAsLiterals=true
+      - env=browser
+      - esModuleInterop=true
+      - forceLong=long
+      - oneof=unions
+      - outputServices=nice-grpc,outputServices=generic-definitions
+      - unrecognizedEnum=false
+      - removeEnumPrefix=true
+      - useDate=false
+      - useMapType=true
