--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -2,15 +2,15 @@ version: v1
 managed:
   enabled: true
   go_package_prefix:
-    default: github.com/c4t-but-s4d/neo/v2/proto/go
+    default: github.com/c4t-but-s4d/neo/v2/pkg/proto
 plugins:
   # Go
   - name: go
-    out: go
+    out: ../pkg/proto
     opt:
       - paths=source_relative
   - name: go-grpc
-    out: go
+    out: ../pkg/proto
     opt:
       - paths=source_relative
 
