--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,22 @@ jobs:
           input: proto
           config: proto/buf.yaml
 
+  front:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+          cache-dependency-path: 'front/pnpm-lock.yaml'
+
+      - name: run linter
+        run: make lint-front
+
   image:
     runs-on: ubuntu-latest
     steps:
